--- a/bsconfig.json
+++ b/bsconfig.json
@@ -2,15 +2,24 @@
   "name": "reprocessing-example",
   "sources": "src",
   "bs-dependencies": ["Reprocessing"],
-  "entries": [{
+  "entries": [
+    {
     "backend": "bytecode",
     "main-module": "Indexhot"
-  },{
+    },
+    {
     "backend": "js",
     "main-module": "Index"
-  },{
+    },
+    {
     "backend": "native",
     "main-module": "Index"
-  }],
+    }, 
+    /*
+    {
+      "backend": "byte",
+      "main-module": "Main"
+    } */
+  ],
   "refmt": 3,
 }
