Write up README part 1

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -12,14 +12,13 @@
     "main-module": "Index"
     },
     {
-    "backend": "native",
-    "main-module": "Index"
+      "backend": "native",
+      "main-module": "Index"
     }, 
-    /*
     {
-      "backend": "byte",
-      "main-module": "Main"
-    } */
+      "backend": "bytecode",
+      "main-module": "Index"
+    }
   ],
   "refmt": 3,
 }
