--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "clean": "bsb -clean-world"
   },
   "dependencies": {
-    "Reprocessing": "schmavery/reprocessing"
+    "reprocessing": "0.2.0"
   },
   "devDependencies": {
-    "bs-platform": "bsansouci/bsb-native#3.2.0",
+    "bsb-native": "4.0.6",
     "webpack": "^4.16.3",
     "webpack-cli": "^3.1.0"
   }
